Fixes issue #208 style2 overlap

--- a/styles.css
+++ b/styles.css
@@ -1617,7 +1617,9 @@ body.format-tiles.jsenabled .course-content .headerabovetiles {
 .format-tiles li.tile.phototile.tilestyle-2 .availabilityinfo {
     position: absolute;
     bottom: inherit;
-    top: 20px;
+    top:9px;
+    left:3px;
+    right:unset;
 }
 .format-tiles .existingtilephoto {
     height: 160px;
